5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4486/executions/1590_2049.log
== TEST (2019-03-29 20:22:10) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
X = int(input("Digite o dividendo:"))
Y = int(input("Digite o divisor:"))
print("Dividendo:"X)
print("Divisor:"Y)
print("Quociente:"X//Y)
print("Resto:" X % Y)

-- ERROR:
File "XXXX", line 6
    print("Dividendo:"X)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 20:22:51) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
X = int(input("Digite o dividendo:"))
Y = int(input("Digite o divisor:"))
print("Dividendo:",X)
print("Divisor:",Y)
print("Quociente:",X//Y)
print("Resto:", X % Y)

-- EXECUTION TIME:
0.143933
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
Digite o dividendo:Digite o divisor:Dividendo: 8
Divisor: 5
Quociente: 1
Resto: 3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
Digite o dividendo:Digite o divisor:Dividendo: 14
Divisor: 2
Quociente: 7
Resto: 0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
Digite o dividendo:Digite o divisor:Dividendo: 347
Divisor: 2
Quociente: 173
Resto: 1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 20:23:11) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
X = int(input("Digite o dividendo:"))
Y = int(input("Digite o divisor:"))
print(X)
print(Y)
print(X//Y)
print( X % Y)

-- EXECUTION TIME:
0.134213
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8
5
1
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14
2
7
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347
2
173
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
